--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,6 +1,7 @@
 <h1>ID：<%= @task.id %>の詳細</h1>
 
 <p><%= @task.content %></p>
+<p>状態：<%= @task.status %></p>
 
 <%= link_to 'タスクを編集する',edit_task_path(@task) %>
 <%= link_to 'タスクを削除する',@task, method: :delete, data: { confirm: '本当に削除してよろしいですか？' } %>
