--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,19 +1,26 @@
-<%= form_for(task) do |f| %>
-  <% if task.errors.any? %>
-    <div id="error_explanation">
-      <ul>
-        <% task.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
+<div class="row"> 
+  <div class="col-xs-12 col-sm-offset-2 col-sm-8 col-lg-offset-3 col-lg-6">
+    <%= form_for(task) do |f| %>
+        <% if task.errors.any? %>
+          <div class="alert alert-warning">
+            <ul>
+              <% task.errors.full_messages.each do |message| %>
+                <li><%= message %></li>
+              <% end %>
+            </ul>
+          </div>
         <% end %>
-      </ul>
-    </div>
-  <% end %>
-  
-  <%= f.label :content, 'タスク'%>
-  <%= f.text_field :content %>
-  
-  <%= f.label :status, '状態'%>
-  <%= f.select :status, [['完了'],['作業中'],['未着手']] %>
-  
-  <%= f.submit '登録' %>
-<% end %>
+      
+      <div class="form-group">
+        <%= f.label :content, 'タスク'%>
+        <%= f.text_field :content, class:"form-control" %>
+      </div>
+      
+      <div class="form-group">
+        <%= f.label :status, '状態'%>
+        <%= f.select :status, [['完了'],['作業中'],['未着手']] , {}, :class => "form-control" %>
+      </div>
+      <%= f.submit '登録' %>
+    <% end %>
+  </div>
+</div>
