--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,26 +1,10 @@
 <h1>タスク一覧</h1>
+<h3>(<%= @user.name %>でログイン中)</h3>
 
-
-<% if @tasks.any? %>
-  <table class="table table-striped">
-    <thead>
-      <tr>
-        <th>id</th>
-        <th>タスク</th>
-        <th>状態</th>
-      </tr>
-    </thead>
-    <tbody>
-      <% @tasks.each do |task| %>
-        <tr>
-          <td><%= link_to task.id, task %></td>
-          <td><%= task.content %></td>
-          <td><%= task.status %></td>
-        </tr>
-      <% end %>
-    </tbody>
-  </table>
+<% if @tasks %>
+  <%= render 'tasks/tasks', tasks: @tasks %>
+<% else %>
+  <p>タスクはありません</p>
 <% end %>
-
 
 <%= link_to '新規タスク', new_task_path, class: "btn btn-primary" %>
